# pitch-tracker

./: CMakeLists.txt  args.sh  build-docker-images.sh  build.sh  deploy-android.sh  deploy-linux.sh  deploy-windows.sh  deploy.sh
dist-res/: Info.plist
dist-res/android-project/app/: build.gradle
dist-res/android-project/app/src/main/: AndroidManifest.xml
dist-res/android-project/app/src/main/java/fr/cloyunhee/pitchtracker/: PitchTracker.java
dist-res/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
docker/: Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  deploy-android.sh  deploy-linux.sh  deploy-windows.sh
src/: main.cpp  sdl2.h
src/app/: app.h  context.cpp  context.h
src/sdl2/: audio.cpp  audio.h  context.cpp  context.h  font.cpp  font.h  sdl2.h
src/tracker/: analysis.cpp  context.cpp  context.h  tracker.h
src/tracker/processors/: filter_fir.cpp  filter_iir.cpp  hanning.cpp  lpc.cpp  lpc_residual.cpp  pick_peaks.cpp  pitch_acf.cpp  pitch_amdf_m.cpp  processors.h
